dhbw-receivedata/manifests/deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dhbw-receivedata
spec:
  # Create 5 pods to load balance by the service
  replicas: 1
  selector:
    matchLabels:
      app: dhbw-receivedata
  template:
    metadata:
      labels:
        app: dhbw-receivedata
    spec:
      containers:
        - image: replace/me/receivedata
          name: dhbw-receivedata
          resources:
            # limit to 128 MB and 1 core
            # not *technically* 128MB but 128 Mebibyte, but close enough...
            limits:
              memory: "128Mi"
              cpu: "1"
