dhbw-receivedata/manifests/deploy/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dhbw-receivedata
    app.kubernetes.io/component: dhbw-receivedata
    app.kubernetes.io/instance: dhbw-receivedata
    app.kubernetes.io/part-of: dhbw-micro
  name: dhbw-receivedata
spec:
  ports:
  - name: 4001-tcp
    port: 4001
    protocol: TCP
    targetPort: 4001
  selector:
    app: dhbw-receivedata
    deploymentconfig: dhbw-receivedata
  sessionAffinity: None
  type: ClusterIP
