dhbw-receivedata/manifests/deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dhbw-receivedata
spec:
  rules:
    - host: dhbw-micro.info
      http:
        paths:
          - path: /values
            pathType: Prefix
            backend:
              service:
                name: dhbw-receivedata
                port:
                  number: 4001
